<resources>
    <string name="app_name">CloudWebService5</string>

    <string name="social_login_info_kakao_Admin_key">kakaoa11176a03abea29058387b64bce0b517</string>
    <string name="social_login_info_kakao_Native_key">kakao85eeb2478a8e803514fcfc7845ba55b3</string>
    <string name="social_login_info_kakao_REST_key">kakao1f6316350ddf8ce606a3b6cb06cf78ea</string>

    <string name="social_login_info_naver_client_id">RbeCk9ELvSyfeToFRqF8</string>
    <string name="social_login_info_naver_client_secret">fxTmkjaiRu</string>
    <string name="social_login_info_naver_client_token">ca72431bf6bc7729c82dbb19ed7a9f2c</string>
    <string name="social_login_info_naver_client_name">네이버아이디 로그인</string>

    <string name="social_login_info_google_appID">107721086585-gfku9c5gbpml2sced8qa2fhhgr1t6k56.apps.googleusercontent.com</string>
    <string name="social_login_info_google_webID">107721086585-djm3kgu7093j572fiaapmuife8pc3c9t.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_id">아이디</string>
    <string name="prompt_password">비밀번호</string>
    <string name="prompt_name">이름</string>
    <string name="prompt_phone_number">번호</string>
    <string name="password_recheck">비밀번호 재확인</string>
    <string name="id_hint">영문, 숫자 : 8 ~ 12자</string>
    <string name="password_hint">영문, 숫자, 특수문자 : 8 ~ 15자</string>
    <string name="annual_revenue">연매출</string>
    <string name="description_hint">가게에 대한 설명을 입력해주세요.</string>
    <string name="sign_up_store">가게 등록</string>
    <string name="store_name">가게명</string>
    <string name="description">설명</string>
    <string name="address">주소</string>
    <string name="annual_revenue_hint">단위: (백 만)</string>
    <string name="action_sign_up">회원가입</string>
    <string name="action_sign_in">로그인</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="action_sign_in_short">Sign in</string>
</resources>